# sgemm-optimization

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.en.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  _config.yml  index.md  roofline_data_512.csv  specs.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  openspec-validation.yml  pages.yml
.kiro/specs/sgemm-optimization/: design.md  requirements.md  tasks.md
_includes/: head_custom.html  nav_footer_custom.html
_sass/custom/: custom.scss
assets/: README.md
assets/images/: README.md
assets/js/: language-toggle.js
benchmarks/data/: roofline_data_1024.csv  roofline_data_2048.csv  roofline_data_4096.csv
changelog/: 2025-02-13_project-infrastructure.md  2026-03-09_major-refactoring.md  2026-03-10_pages-optimization.md
cmake/: SgemmTestHelpers.cmake
docs/: README.md  _config.yml  architecture.md  benchmark-results.md  benchmark_settings.md  cuda-memory-cheatsheet.md  device_capability_seam.md  getting-started.md  index.md  kernel-bank-free.md  kernel-details.md  kernel-double-buffer.md  kernel-naive.md  kernel-tensor-core.md  kernel-tiled.md  learning-path.md  optimization-playbook.md  package-lock.json  package.json  performance-casebook.md
docs/.vitepress/: config.ts
docs/.vitepress/components/: Citation.vue  PerfCompare.vue  ThemedFigure.vue
docs/.vitepress/theme/: breakpoints.ts  index.ts  style.css
docs/en/: architecture.md  benchmark-results.md  cuda-memory-cheatsheet.md  getting-started.md  index.md  interview-playbook.md  kernel-bank-free.md  kernel-double-buffer.md  kernel-naive.md  kernel-tensor-core.md  kernel-tiled.md  learning-path.md  optimization-playbook.md  performance-casebook.md  project-highlights.md  references.md
docs/en/academy/: cuda-memory-cheatsheet.md  index.md  kernel-bank-free.md  kernel-tensor-core.md  learning-path.md  optimization-playbook.md
docs/en/architecture/: index.md  kernel-ladder.md  memory-flow.md  system-blueprint.md  tensor-core-path.md
docs/en/methodology/: benchmark-discipline.md  diagnosis-loop.md  index.md
docs/en/overview/: getting-started.md  index.md  reader-map.md
docs/en/research/: evolution.md  further-reading.md  index.md  papers.md  performance-casebook.md  reference-map.md  references.md  related-projects.md
docs/en/resources/: further-reading.md  index.md  papers.md
docs/en/validation/: benchmark-results.md  benchmark-scope.md  correctness-policy.md  index.md  performance-model.md  reproducibility.md
docs/tests/: architecture-routes.test.mjs
docs/zh/: architecture.md  benchmark-results.md  cuda-memory-cheatsheet.md  getting-started.md  index.md  interview-playbook.md  kernel-naive.md  kernel-tensor-core.md  kernel-tiled.md  learning-path.md  optimization-playbook.md  performance-casebook.md  project-highlights.md  references.md
docs/zh/academy/: benchmark-discipline.md  cuda-memory-cheatsheet.md  index.md  kernel-bank-free.md  kernel-double-buffer.md  kernel-naive.md  kernel-tensor-core.md  learning-path.md  optimization-playbook.md
docs/zh/architecture/: index.md  kernel-ladder.md  memory-flow.md  system-blueprint.md  tensor-core-path.md
docs/zh/methodology/: diagnosis-loop.md  index.md
docs/zh/overview/: getting-started.md  index.md  reader-map.md
docs/zh/research/: evolution.md  further-reading.md  index.md  papers.md  performance-casebook.md  reference-map.md  references.md  related-projects.md
docs/zh/resources/: further-reading.md  index.md  papers.md
docs/zh/validation/: benchmark-results.md  benchmark-scope.md  correctness-policy.md  index.md  performance-model.md  reproducibility.md
openspec/: AGENTS.md  README.md  config.yaml
openspec/changes/archive/0001-core-architecture/: change.yaml  design.md  proposal.md
openspec/changes/archive/0002-implementation-roadmap/: change.yaml  design.md  proposal.md
openspec/changes/archive/2026-04-23-archive-ready-governance-cleanup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-initial-migration/: proposal.md  tasks.md
openspec/changes/archive/2026-04-29-bilingual-docs-closeout/: change.yaml  tasks.md
openspec/changes/bilingual-docs-closeout/: design.md  proposal.md  tasks.md
openspec/changes/rebuild-pages-whitepaper/: proposal.md  tasks.md
openspec/changes/revamp-public-presentation/: design.md  proposal.md  tasks.md
openspec/specs/architecture/: spec.md
openspec/specs/kernel/: spec.md
openspec/specs/project-presentation/: spec.md
openspec/specs/repository-governance/: spec.md
openspec/specs/testing/: spec.md
scripts/: install-hooks.sh
specs/product/: sgemm-kernel-requirements.md
specs/rfc/: 0001-core-architecture.md  0002-implementation-roadmap.md
specs/testing/: kernel-verification.md
src/: benchmark_runner.cuh  cli_parser.cuh  main.cu
src/kernels/: bank_conflict_free_sgemm.cuh  double_buffer_sgemm.cuh  kernel_catalog.cuh  naive_sgemm.cuh  tensor_core_benchmark.cuh  tensor_core_capabilities.cuh  tensor_core_compute.cuh  tensor_core_fallback.cuh  tensor_core_launcher.cuh  tensor_core_launcher_impl.cuh  tensor_core_sgemm.cuh  tiled_sgemm.cuh
src/utils/: benchmark.cuh  benchmark_core.cuh  benchmark_cublas.cuh  benchmark_metrics.cuh  benchmark_settings.cuh  cuda_utils.cuh  device_info_provider.cuh  verify.cuh
tests/: gtest_cuda_environment.cuh  test_benchmark_settings.cpp  test_benchmark_settings.cu  test_device_info_cpu.cu  test_device_info_cuda.cu  test_device_info_seam.cu  test_kernel_catalog.cu  test_performance.cu  test_sgemm.cu  test_utils.cu
tests/baselines/: README.md
zh/: index.md  specs.md
zh/docs/: architecture.md  benchmark-results.md  cuda-memory-cheatsheet.md  getting-started.md  kernel-bank-free.md  kernel-double-buffer.md  kernel-naive.md  kernel-tensor-core.md  kernel-tiled.md  learning-path.md  optimization-playbook.md  performance-casebook.md
(+13 files in other folders)
